test_suite/ERROR_no_matching_method.out
ERROR_no_matching_method.java: 10:  Semantic Error: No matching method with id: `foo`
